--- a/css/styles.css
+++ b/css/styles.css
@@ -6,119 +6,194 @@
    box-sizing: border-box;
 }
 
-.topnav {
-   background-color: black;
-   overflow: hidden;
-   z-index: 1;
+.nav-bar {
+   height: 90px;
+   background: black;
 }
 
-.topnav a {
+.brand {
+   position: absolute;
+   padding-left: 20px;
    float: left;
-   display: block;
-   color: #40bad5;
-   text-align: center;
-   padding: 20px 46px;
+   line-height: 90px;
+   text-transform: uppercase;
+   font-size: 1.4em;
+}
+
+.brand a img {
+   max-height: 70px;
+}
+
+.brand a,
+.brand a:visited {
+   color: #ffffff;
    text-decoration: none;
-   font-size: 19px;
-   font-family: 'Roboto Mono',
-      monospace;
 }
 
-
-.topnav a:hover {
-   background-color: #ddd;
-   color: black;
-
+.nav-container {
+   max-width: 1000px;
+   margin: 0 auto;
 }
 
-.topnav a.active {
-   background-color: #40bad5;
-   color: white;
+nav {
+   float: right;
 }
 
-.topnav .icon {
+nav ul {
+   list-style: none;
+   margin: 0;
+   padding: 0;
+}
+
+nav ul li {
+   float: left;
+   position: relative;
+}
+
+nav ul li a,
+nav ul li a:visited {
+   display: block;
+   padding: 0 20px;
+   line-height: 90px;
+   background: black;
+   color: #ffffff;
+   text-decoration: none;
+}
+
+nav ul li a:hover,
+nav ul li a:visited:hover {
+   background: #2ab1ce;
+   color: #ffffff;
+}
+
+nav ul li a:not(:only-child):after,
+nav ul li a:visited:not(:only-child):after {
+   padding-left: 4px;
+   content: ' ▾';
+}
+
+nav ul li ul li {
+   min-width: 190px;
+}
+
+nav ul li ul li a {
+   padding: 15px;
+   line-height: 20px;
+}
+
+.nav-dropdown {
+   position: absolute;
    display: none;
+   z-index: 1;
+   box-shadow: 0 3px 12px rgba(0, 0, 0, 0.15);
 }
 
-@media screen and (max-width: 1200px) {
-   .topnav a {
-      float: left;
+.nav-mobile {
+   display: none;
+   position: absolute;
+   top: 0;
+   right: 0;
+   background: black;
+   height: 90px;
+   width: 90px;
+}
+
+@media only screen and (max-width: 970px) {
+   .nav-mobile {
       display: block;
-      color: #40bad5;
-      text-align: center;
-      padding: 10px 23px;
-      text-decoration: none;
-      font-size: 19px;
-      font-family: 'Roboto Mono',
-         monospace;
    }
 
-   .topnav a:not(:first-child) {
+   nav {
+      width: 100%;
+      padding: 70px 0 15px;
+   }
+
+   nav ul {
       display: none;
    }
 
-   .topnav a.icon {
-      float: right;
-      display: block;
-   }
-
-   .sidenav {
-      width: 200px;
-      position: fixed;
-      z-index: 1;
-      top: 20px;
-      right: 10px;
-      background: #eee;
-      display: none;
-      padding: 8px 0;
-   }
-
-   .sidenav a {
-      padding: 6px 8px 6px 16px;
-      text-decoration: none;
-      font-size: 25px;
-      color: #2196F3;
-      display: block;
-   }
-
-   .sidenav a:hover {
-      color: #064579;
-   }
-}
-
-@media screen and (max-width: 400px) {
-   .topnav a {
-      float: left;
-      display: block;
-      color: #40bad5;
-      text-align: center;
-      padding: 5px 11.5px;
-      text-decoration: none;
-      font-size: 10px;
-      font-family: 'Roboto Mono',
-         monospace;
-   }
-
-
-
-}
-
-@media screen and (max-width: 700px) {
-   .topnav.responsive {
-      position: relative;
-   }
-
-   .topnav.responsive a.icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-   }
-
-   .topnav.responsive a {
+   nav ul li {
       float: none;
-      display: block;
-      text-align: left;
    }
+
+   nav ul li a {
+      padding: 15px;
+      line-height: 20px;
+      padding-left: 25%;
+
+   }
+
+   nav ul li ul li a {
+      padding-left: 30%;
+   }
+
+   .nav-dropdown {
+      position: static;
+   }
+
+   .brand a img {
+      max-height: 60px;
+      margin-top: 5px;
+   }
+}
+
+@media screen and (min-width: 970px) {
+   .nav-list {
+      display: block !important;
+   }
+}
+
+#nav-toggle {
+   position: absolute;
+   left: 18px;
+   top: 22px;
+   cursor: pointer;
+   padding: 10px 35px 16px 0px;
+}
+
+#nav-toggle span,
+#nav-toggle span:before,
+#nav-toggle span:after {
+   cursor: pointer;
+   border-radius: 1px;
+   height: 5px;
+   width: 35px;
+   background: #ffffff;
+   position: absolute;
+   display: block;
+   content: '';
+   transition: all 300ms ease-in-out;
+}
+
+#nav-toggle span:before {
+   top: -10px;
+}
+
+#nav-toggle span:after {
+   bottom: -10px;
+}
+
+#nav-toggle.active span {
+   background-color: transparent;
+}
+
+#nav-toggle.active span:before,
+#nav-toggle.active span:after {
+   top: 0;
+}
+
+#nav-toggle.active span:before {
+   transform: rotate(45deg);
+}
+
+#nav-toggle.active span:after {
+   transform: rotate(-45deg);
+}
+
+article {
+   max-width: 1000px;
+   margin: 0 auto;
+   padding: 10px;
 }
 
 .sidenav {
@@ -153,7 +228,29 @@
    margin: 20px;
    padding: 30px;
    border: 3px solid;
+}
 
+@media screen and (max-width: 470px) {
+
+   .par1 {
+      width: 200px;
+      height: 100px;
+   }
+
+   .povestka {
+      width: 250px;
+      height: 200px;
+      padding: 10px;
+      border: 3px solid;
+   }
+
+   .povestka h1 {
+      font-size: 2rem;
+   }
+
+   .povestka h2 {
+      font-size: 1rem;
+   }
 }
 
 #nti2 {
@@ -164,6 +261,8 @@
       "three three four four"
       "three three four four";
 }
+
+
 
 .item1 {
    grid-area: header;
@@ -203,17 +302,53 @@
    font-size: 30px;
 }
 
+@media screen and (max-width: 700px) {
+   /* .seichas {
+      width: 100px;
+   } */
+
+   .grid-container p {
+      font-size: 0.5rem;
+   }
+}
+
+
 .par2 {
    width: 400px;
    height: 300px;
 }
 
 
-@media screen and (max-width: 680px) {
-   #nti {
-      width: 400px;
+@media screen and (max-width: 470px) {
+
+   .par2 {
+      width: 200px;
+      height: 100px;
+   }
+
+   .povestka {
+      width: 250px;
       height: 200px;
-      margin-bottom: 350px;
+      padding: 10px;
+      border: 3px solid;
+   }
+
+   .povestka h1 {
+      font-size: 1rem;
+   }
+
+   .povestka h2 {
+      font-size: 1rem;
+   }
+}
+
+
+
+
+@media screen and (max-width: 680px) {
+   footer p {
+      font-size: 0.4rem;
+
    }
 }
 
