--- a/css/styles35.css
+++ b/css/styles35.css
@@ -6,6 +6,196 @@
    box-sizing: border-box;
 }
 
+.nav-bar {
+   height: 90px;
+   background: black;
+}
+
+.brand {
+   position: absolute;
+   padding-left: 20px;
+   float: left;
+   line-height: 90px;
+   text-transform: uppercase;
+   font-size: 1.4em;
+}
+
+.brand a img {
+   max-height: 70px;
+}
+
+.brand a,
+.brand a:visited {
+   color: #ffffff;
+   text-decoration: none;
+}
+
+.nav-container {
+   max-width: 1000px;
+   margin: 0 auto;
+}
+
+nav {
+   float: right;
+}
+
+nav ul {
+   list-style: none;
+   margin: 0;
+   padding: 0;
+}
+
+nav ul li {
+   float: left;
+   position: relative;
+}
+
+nav ul li a,
+nav ul li a:visited {
+   display: block;
+   padding: 0 20px;
+   line-height: 90px;
+   background: black;
+   color: #ffffff;
+   text-decoration: none;
+}
+
+nav ul li a:hover,
+nav ul li a:visited:hover {
+   background: #2ab1ce;
+   color: #ffffff;
+}
+
+nav ul li a:not(:only-child):after,
+nav ul li a:visited:not(:only-child):after {
+   padding-left: 4px;
+   content: ' ▾';
+}
+
+nav ul li ul li {
+   min-width: 190px;
+}
+
+nav ul li ul li a {
+   padding: 15px;
+   line-height: 20px;
+}
+
+.nav-dropdown {
+   position: absolute;
+   display: none;
+   z-index: 1;
+   box-shadow: 0 3px 12px rgba(0, 0, 0, 0.15);
+}
+
+.nav-mobile {
+   display: none;
+   position: absolute;
+   top: 0;
+   right: 0;
+   background: black;
+   height: 90px;
+   width: 90px;
+}
+
+@media only screen and (max-width: 970px) {
+   .nav-mobile {
+      display: block;
+   }
+
+   nav {
+      width: 100%;
+      padding: 70px 0 15px;
+   }
+
+   nav ul {
+      display: none;
+   }
+
+   nav ul li {
+      float: none;
+   }
+
+   nav ul li a {
+      padding: 15px;
+      line-height: 20px;
+      padding-left: 25%;
+
+   }
+
+   nav ul li ul li a {
+      padding-left: 30%;
+   }
+
+   .nav-dropdown {
+      position: static;
+   }
+
+   .brand a img {
+      max-height: 60px;
+      margin-top: 5px;
+   }
+}
+
+@media screen and (min-width: 970px) {
+   .nav-list {
+      display: block !important;
+   }
+}
+
+#nav-toggle {
+   position: absolute;
+   left: 18px;
+   top: 22px;
+   cursor: pointer;
+   padding: 10px 35px 16px 0px;
+}
+
+#nav-toggle span,
+#nav-toggle span:before,
+#nav-toggle span:after {
+   cursor: pointer;
+   border-radius: 1px;
+   height: 5px;
+   width: 35px;
+   background: #ffffff;
+   position: absolute;
+   display: block;
+   content: '';
+   transition: all 300ms ease-in-out;
+}
+
+#nav-toggle span:before {
+   top: -10px;
+}
+
+#nav-toggle span:after {
+   bottom: -10px;
+}
+
+#nav-toggle.active span {
+   background-color: transparent;
+}
+
+#nav-toggle.active span:before,
+#nav-toggle.active span:after {
+   top: 0;
+}
+
+#nav-toggle.active span:before {
+   transform: rotate(45deg);
+}
+
+#nav-toggle.active span:after {
+   transform: rotate(-45deg);
+}
+
+article {
+   max-width: 1000px;
+   margin: 0 auto;
+   padding: 10px;
+}
+
 .topnav {
    background-color: black;
    overflow: hidden;
@@ -124,6 +314,18 @@
 
 }
 
+@media screen and (max-width: 560px) {
+   .param1 {
+      width: 200px;
+      height: 100px;
+   }
+
+   .param2 {
+      width: 200px;
+      height: 100px;
+   }
+}
+
 @media screen and (max-width: 700px) {
    .topnav.responsive {
       position: relative;
@@ -156,7 +358,7 @@
 
 #welcome {
    margin: 0;
-   height: 3000px;
+   height: 1500px;
    width: 100%;
    background: #dddddd;
    background-repeat: no-repeat;
@@ -239,39 +441,13 @@
       text-shadow: none !important;
    }
 
-   .topnav {
-      background-color: black;
-      overflow: hidden;
-      z-index: 1;
-   }
-
-   .topnav a {
-      float: left;
-      display: block;
-      color: #40bad5;
-      text-align: center;
-      padding: 20px 46px;
-      text-decoration: none;
-      font-size: 19px;
-      font-family: 'Roboto Mono',
-         monospace;
-   }
-
-
-   .topnav a:hover {
-      background-color: #ddd;
-      color: black;
-
-   }
-
-   .topnav a.active {
-      background-color: #40bad5;
-      color: white;
-   }
-
-   .topnav .icon {
+   .sidenav {
       display: none;
    }
+
+
+
+
 
    .param1 {
       width: 500px;
@@ -283,7 +459,7 @@
       height: 300px;
    }
 
-   #welcome {
+   /* #welcome {
       margin: 0;
       height: 3000px;
       width: 100%;
@@ -293,7 +469,7 @@
       background-position: center center;
       background-attachment: fixed;
 
-   }
+   } */
 
    .about {
       margin: 10px;
@@ -318,8 +494,8 @@
    }
 
    .square {
-      width: 100px;
-      height: 100px;
+      width: 150px;
+      height: 150px;
       background-color: red;
       position: relative;
       animation-name: example;
